@startuml

package ui {
    class SageDocs
    {
        +init()
    }
}

package lib {
    class Dataset {
        -columnNames : vector<string>
        -dataRows : vector<Rows>
    }

    package Processors {
        class DataProcessorFactory
        {
            createDataProcessor(docType) : IDataProcessor
        }

        class IDataProcessor {
            +process(std::shared_ptr<Dataset>) : Dataset
        }

        class SimpleTableProcessor {
            +process(std::shared_ptr<Dataset>) : Dataset
        }

        class OmegaInvoiceProcessor {
            +process(std::shared_ptr<Dataset>) : Dataset
        }

        class BesuglayaInvoiceProcessor {
            +process(std::shared_ptr<Dataset>) : Dataset
        }

        note "Many other processors are not shown here" as N1
        N1 .. BesuglayaInvoiceProcessor
        N1 .. OmegaInvoiceProcessor

        SimpleTableProcessor -up-|> IDataProcessor
        BesuglayaInvoiceProcessor -up-|> SimpleTableProcessor
        OmegaInvoiceProcessor -up-|> SimpleTableProcessor
    }

    package Writers {

        class WriterFactory {
            createWriter(ReaderFileType) : IWriter
        } 

        interface IWriter {
            +setFilePath(new_path)
            +writeData(Dataset)
        }

        class CsvWriter {
            +setFilePath(new_path)
            +writeData(Dataset)
        }

        class XmlWriter {
            +setFilePath(new_path)
            +writeData(Dataset)
        }

        note "Many other writers not shown here" as N2
        N2 .. CsvWriter
        N2 .. XmlWriter

        CsvWriter -up-|> IWriter
        XmlWriter -up-|> IWriter
    }

    package Readers {
        class ReaderFactory {
            createReader(ReaderFileType) : IReader
        } 

        interface IReader {
            +setFilePath(new_path)
            +readData(): std::shared_ptr<Dataset>
        }

        class CsvReader {
            +setFilePath(new_path)
            +readData(): std::shared_ptr<Dataset>
        }

        class XlsxReader {
            +setFilePath(new_path)
            +readData(): std::shared_ptr<Dataset>
        }

        note "Many other readers not shown here" as N3
        N3 .. CsvReader
        N3 .. XlsxReader

        CsvReader -up-|> IReader
        XlsxReader -up-|> IReader
    }

    Dataset -- IDataProcessor
}


ReaderFactory --> IReader
WriterFactory --> IWriter
DataProcessorFactory --> IDataProcessor

SageDocs --> DataProcessorFactory
SageDocs --> WriterFactory
SageDocs --> ReaderFactory
SageDocs --> Dataset

@enduml
